--- a/inplace/templates/inplace/inplace_detail.html
+++ b/inplace/templates/inplace/inplace_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block title %} Inplace | Cepstrum {% endblock title %} {% block css %}
 <style>
     .carousel-item {
-        height: 100vh;
+        
         background: no-repeat center center scroll;
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -18,27 +18,19 @@
     }
     
     .carousel-item-content {
-        /* margin-top: 20%;
-  margin-left: 15%;
-  margin-right: 30%; */
- 
-   text-align: justify;
-        width: 75%;
+        width: 85%;
         font-size: 2vh;
     }
     .carousel-item-screen {
         color: white;
         background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
-        height: 100%;align-items:center;
+        height: 100%;
+        align-items:center;
         display: flex;
         justify-content: center;
     }
-    @media  screen and (max-width:1000px) {
-       .carousel-item{
-        height: 92.4vh;
-       }
-    }
+  
     .link-button {
         color: white;
         background-color: #555555;
@@ -57,47 +49,32 @@
         padding: 5px 10px;
         border-radius: 5px;
     }
+   .container1{
+    display: flex;
+    align-content: center;
+   }
 </style>
 
 {% endblock %} {% block carousel %}
-<div id="carouselExampleIndicators" class="carousel slide my-carousel
-    my-carousel" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image:
-        url('{{object.pic.url}}');">
-            <div class="carousel-item-screen">
-                <div class="carousel-item-content">
-                    <h1>{{object.title|safe}}</h1>
-                    <div class="addthis_inline_share_toolbox"></div><br><br>
-                    <h5>{{object.intro|safe}}</h5>
-                </div>
 
-
+<div class="container1">
+    <div class="carousel-item active" style="background-image:
+     url('{{object.pic.url}}');">
+        <div class="carousel-item-screen">
+            <div class="carousel-item-content">
+                <h1>{{object.title|safe}}</h1>
+                <div class="addthis_inline_share_toolbox"></div><br><br>
+                <h5>{{object.intro|safe}}</h5>
             </div>
 
+
         </div>
-
-
-
-
-
-
-        <!-- <div class="carousel-item" data-interval="9000">
-      <video autoplay muted loop width="100%" height="130%" id="myVideo">
-        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
-      </video>
-
-    </div> -->
 
     </div>
 
 </div>
-
 {% endblock %} {% block content %}
-<br><br><br>
+
 <div class="container" style="text-align: center;">
     <p>{{object.article|safe}}</p>
 
