--- a/inplace/templates/inplace/inplace_list.html
+++ b/inplace/templates/inplace/inplace_list.html
@@ -1,111 +1,84 @@
 {% extends 'base.html' %} {% load static %} {% block title %} Inplace | Cepstrum {% endblock title %} {% block css %}
 <style>
-    .carousel-item {
-        height: 100vh;
-        background: no-repeat center center scroll;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-    
-    .content {
-        text-align: center;
-        padding-top: 5%;
-        padding-right: 4%;
-        padding-left: 60%;
-        color: white;
-    }
-    
     .carousel-item-content {
-       
- 
-   text-align: justify;
-        width: 75%;
-        font-size: 2vh;
+        color: white;
+
+        text-align: left;
+        width: 80%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 2.5vh;
+
     }
+
     .carousel-item-screen {
         color: white;
-        background-color: rgba(0, 0, 0, 0.6);
-        width: 100%;
-        height: 100%;align-items:center;
+
+
         display: flex;
         justify-content: center;
+        align-items: center;
     }
-    @media  screen and (max-width:1000px) {
-       .carousel-item{
-        height: 92.4vh;
-       }
-    }
-    .card-img-top{
+
+    .card-img-top {
         aspect-ratio: 3/2 !important;
     }
-    .container1{
+
+    .container1 {
         margin-right: 0;
-        width: 100%;
+
         margin-left: 0;
-        padding: 0% 5%;
-        padding-bottom: 10vh;
+
     }
-    .link-button {
-        color: white;
-        background-color: #555555;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
+
+    .background-black {
+        width: 100%;
+        height: 100%;
+           background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 5vh;
+        padding-top: 5vh;
     }
-    
-    .link-button:hover {
-        text-decoration: none;
-        color: white;
-        background-color: #222222;
-        display: inline-block;
-        text-decoration: none;
-        padding: 5px 10px;
-        border-radius: 5px;
+    .background{
+       
+       background-image: url('/cepstrum/static/inplace/inplacecover.png');
+        background-size: cover;
+        background-repeat: no-repeat; 
+       
+   }
+    .container2 {
+        display: flex;
+        flex-grow: 1;
     }
 </style>
 
 {% endblock %} {% block carousel %}
-<div id="carouselExampleIndicators" class="carousel slide my-carousel
-    my-carousel" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <!-- <div class="carousel-item active" style="background-image:
-        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');"> -->
-        <div class="carousel-item active"  style="background-image: url('/cepstrum/static/inplace/inplacecover.png') ">
-            <div class="carousel-item-screen">
-                <div class="carousel-item-content">
-                    <h1 class="text-2xl mt-5 md:text-5xl md:mt-2"><b>About <font color="yellow">Inplace</font> </h1>
-                    <br></b>
-                    <p  class="text-lg md:text-2xl">
-                        Inplace is the flagship publication of Cepstrum, IITG. This series features articles by junior and senior year students from the EEE department about their internship and placement experiences. The articles cover test preparation, work experience and everything in between.
-                    </p>
+<div class="container2">
+    <div
+         class="background">
+        <div class="background-black">
+            <div class="carousel-item-content">
+
+                <div class="text-2xl  md:text-5xl mb-4"><b>About <font color="yellow">Inplace</font>
                 </div>
-
-
+                <div class="text-lg md:text-2xl">
+                 This series features articles by sophomores of the EEE department, chronicling their experiences at various conferences and contests as well as their adventures in exploring new fields and domains like Finance, Competitive Programming and Machine Learning.
+                </div>
             </div>
 
         </div>
-
-
-
-
-
-
-        <!-- <div class="carousel-item" data-interval="9000">
-      <video autoplay muted loop width="100%" height="130%" id="myVideo">
-        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
-      </video>
-
-    </div> -->
-
     </div>
 
 </div>
+
+
+
+
+
 
 {% endblock %} {% block content %}
 
