--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %} {% load static %} {% block title %} Team | Cepstrum {% endblock title %} {% block css %}
 <style>
-    .carousel-item {
-        height: 100vh;
-        background: no-repeat center center scroll;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+ .carousel-item-content {
+        color: white;
+
+        text-align: left;
+        width: 80%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 2.5vh;
+
     }
-    
+
     .content {
         text-align: center;
         padding-top: 5%;
@@ -16,62 +20,60 @@
         padding-left: 4%;
         color: white;
     }
-    
-   
-    
+    .carousel-item-screen {
+        color: white;
+
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
     .sections-header {
         font-size: 48px;
         color: black;
         text-align: center;
         margin-bottom: 5vh;
     }
-    
+    .card-img-top {
+        aspect-ratio: 3/2 !important;
+    }
+
+    .container1 {
+        margin-right: 0;
+
+        margin-left: 0;
+
+    }
     .sections {
         background-color: white;
         padding: 1%;
 
 
     }
-    
-    .carousel-item-content {
-        /* margin-top: 20%;
-  margin-left: 15%;
-  margin-right: 30%; */
- 
-   text-align: justify;
-        width: 75%;
-        font-size: 2vh;
-    }
-    .carousel-item-screen {
-        color: white;
-        background-color: rgba(0, 0, 0, 0.6);
+    .background-black {
         width: 100%;
-        height: 100%;align-items:center;
+        height: 100%;
+           background-color: rgba(0, 0, 0, 0.6);
         display: flex;
         justify-content: center;
+        align-items: center;
+        padding-bottom: 5vh;
+        padding-top: 5vh;
     }
-    @media  screen and (max-width:1000px) {
-       .carousel-item{
-        height: 92.4vh;
-       }
-    }
-    .card {
+    .background{
+       
+       background-image: url('/cepstrum/static/team/team.jpg');
+        background-size: cover;
+        background-repeat: no-repeat; 
+       
+   }
+   .card {
         background: #222;
         color: rgba(250, 250, 250, 0.8);
         margin-bottom: 2rem;
 }
-.container1{
-      width: 100%;
-        padding: 0% 5%;
-      
-        box-sizing: border-box;
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-
-    .card-img-top{
-        aspect-ratio: 1/1;
-    }
 .btn {
   border:none;
   border-image-slice: 1;
@@ -92,40 +94,28 @@
   box-shadow: #222 1px 0 10px;
   text-decoration: underline;
 }
+.container2 {
+        display: flex;
+        flex-grow: 1;
+    }
 </style>
 
 {% endblock %} {% block carousel %}
-<div id="carouselExampleIndicators" class="carousel slide my-carousel
-my-carousel" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-        <!-- <div class="carousel-item active" style="background-image: {% for i in team_list %} {% if i.category.name == 'Cover' %}url('{{i.pic.url}}'){% endif %} {% endfor %} "> -->
-        <div class="carousel-item active" style="background-image: url('/cepstrum/static/team/team.jpg')">
-            <!-- <div style="text-align: center; padding-top: 40%;"> -->
-            <!-- <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl">Team EXECUTIVES</button>
-      <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl1">4th Year</button>
-      <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl2">5rd Year</button>
-      <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl3">Inphase Team</button> -->
-            <!-- <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl4">Web Ops Team</button> -->
-            <div class="carousel-item-screen">
-                <div class="carousel-item-content">
-                    <h1 class="text-2xl mt-5 md:text-5xl md:mt-2"><b>Our <font color="yellow">Team</font> </h1>
-                    <br></b>
-                    <p class="text-lg md:text-2xl">
-                        We are a bunch of students looking over the welfare of all students of the Department of Electronics and Electrical Engineering, IIT Guwahati. We are the backbone of all the student activities right from fresher's orientation to farewell and we take pride
-                        in bridging the gap between students, professors and alumni for continued parallel development of the department.
-                    </p>
-                    <br>
-                    <br>
 
+<div class="container2">
+    <div class="background">
+        <div class="background-black">
+            <div class="carousel-item-content">
 
-
+                <div class="text-2xl  md:text-5xl mb-4"><b>Our <font color="yellow">Team</font>
                 </div>
-
-
+                <div class="text-lg md:text-2xl">
+                    We are a bunch of students looking over the welfare of all students of the Department of Electronics and Electrical Engineering, IIT Guwahati. We are the backbone of all the student activities right from fresher's orientation to farewell and we take pride
+                    in bridging the gap between students, professors and alumni for continued parallel development of the department.
+                </div>
             </div>
+
         </div>
-
-
     </div>
 
 </div>
