--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,31 @@
 {% extends "base.html" %} {% load static %} {% block title %} Home | Cepstrum {% endblock title %} {% block css %}
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <style>
-
     @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@400;500&family=Orbitron&family=Pacifico&family=Poppins&display=swap');
 
     .carousel-item {
-        height: 100vh;
+
         background: no-repeat center center scroll;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        
+
     }
-    .wrapper{
+
+    .wrapper {
         font-family: 'Acme', sans-serif;
         font-weight: 400;
-        
+        padding: 0% 5%;
+        background: linear-gradient(0deg, rgba(4, 32, 58, 0.5), rgba(24, 21, 49, 0.7)), url('/cepstrum/static/images/home_bg.png');
+        background-position: 0;
+        background-size: cover;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
     }
 
     span.cursor {
@@ -32,29 +41,45 @@
     }
 
     @keyframes blink {
-        0%  { background-color: #ccc; }
-        49% { background-color: #ccc; }
-        50% { background-color: transparent; }
-        99% { background-color: transparent; }
-        100%  { background-color: #ccc; }
+        0% {
+            background-color: #ccc;
+        }
+
+        49% {
+            background-color: #ccc;
+        }
+
+        50% {
+            background-color: transparent;
+        }
+
+        99% {
+            background-color: transparent;
+        }
+
+        100% {
+            background-color: #ccc;
+        }
     }
 
 
 
 
-    .container{
+    .container {
         font-family: 'Nunito';
-        /* height: 40vh; */
+
         color: #94FFF9;
         text-align: justify;
         padding: 40px 40px;
         background-color: rgb(0, 0, 0, 0.6);
         backdrop-filter: blur(4px);
-        border-style: solid ;
-        
-        
+        border-style: solid;
+
+
     }
-    .container::before, .container::after{
+
+    .container::before,
+    .container::after {
         content: '';
         display: block;
         position: absolute;
@@ -65,22 +90,17 @@
         right: 1em;
     }
 
-    .initiative-card{
+    .initiative-card {
         background-color: #94FFF9;
         cursor: pointer;
         color: unset;
     }
-
-
-
-
 </style>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 {% endblock %} {% block carousel %}
-{% endblock %}
-{% block content %}
-<div class="wrapper" style=" height: 100vh;padding: 0% 20%; background:linear-gradient(0deg, rgba(4, 32, 58, 0.5), rgba(24, 21, 49, 0.7)), url('/cepstrum/static/images/home_bg.png'); background-position: 0; background-size: cover; text-align: center; display: flex; flex-direction: column; justify-content: center; gap: 20px; align-items: center;">
+<div class="wrapper">
     <!-- <h1><span style="color: #fff;">about </span><span style="color: yellow;">cepstrum</span></h1>
     <div class="container w-4/5 text-sm md:text-xl md:w-3/5 flex justify-center">
         <div style="width: 95%; height: 95%; text-align: justify;">
@@ -88,17 +108,21 @@
         </div>
     </div> -->
     <div class="flex w-1/2 flex-column text-left">
-        <span class=" text-white welcome" style="font-size: 4vh !important
+        <span class=" text-white welcome" style="font-size: 6vh !important
         ;">Welcome back &nbsp;</span>
-        <span class="" style="font-family: 'Montserrat'; font-weight: 600; color: yellow;font-size:4vh !important;">to the home of 
+        <span class="" style="font-family: 'Montserrat'; font-weight: 600; color: yellow;font-size:5vh !important;">to
+            the home of
             <span class="typed-text" style="color: #fff;font-size: 4vh !important;"></span>
             <span class="cursor text-yellow" style="color: yellow;font-size: 4vh !important;">
-            &nbsp;
-        </span> 
-    </span>
+                &nbsp;
+            </span>
+        </span>
     </div>
-    
+
 </div>
+{% endblock %}
+{% block content %}
+
 <!-- <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; margin-top: 40px;">
     <h1 class="text-2xl">Our Initiatives</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-5 w-1/2 text-center h-full mt-4 p-2">
@@ -132,35 +156,35 @@
     let charIndex = 0;
 
     function type() {
-    if (charIndex < textArray[textArrayIndex].length) {
-        if(!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
-        typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
-        charIndex++;
-        setTimeout(type, typingDelay);
-    } 
-    else {
-        cursorSpan.classList.remove("typing");
-        setTimeout(erase, newTextDelay);
-    }
+        if (charIndex < textArray[textArrayIndex].length) {
+            if (!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+            typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
+            charIndex++;
+            setTimeout(type, typingDelay);
+        }
+        else {
+            cursorSpan.classList.remove("typing");
+            setTimeout(erase, newTextDelay);
+        }
     }
 
     function erase() {
         if (charIndex > 0) {
-        if(!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
-        typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex-1);
-        charIndex--;
-        setTimeout(erase, erasingDelay);
-    } 
-    else {
-        cursorSpan.classList.remove("typing");
-        textArrayIndex++;
-        if(textArrayIndex>=textArray.length) textArrayIndex=0;
-        setTimeout(type, typingDelay + 1100);
-    }
+            if (!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+            typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1);
+            charIndex--;
+            setTimeout(erase, erasingDelay);
+        }
+        else {
+            cursorSpan.classList.remove("typing");
+            textArrayIndex++;
+            if (textArrayIndex >= textArray.length) textArrayIndex = 0;
+            setTimeout(type, typingDelay + 1100);
+        }
     }
 
-    document.addEventListener("DOMContentLoaded", function() { // On DOM Load initiate the effect
-    if(textArray.length) setTimeout(type, newTextDelay + 250);
+    document.addEventListener("DOMContentLoaded", function () { // On DOM Load initiate the effect
+        if (textArray.length) setTimeout(type, newTextDelay + 250);
     });
 </script>
 {% endblock %}
