added department catalogue, bold difficulty, commented out events for now

--- a/inplex/templates/inplex/create_experience.html
+++ b/inplex/templates/inplex/create_experience.html
@@ -143,6 +143,24 @@ flex-direction: column;
     gap: 1vh;
     overflow:scroll;
  }
+ #div_id_difficulty2>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty3>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty4>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty5>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty6>label{
+    font-weight: 800;
+ }
+ #div_id_difficulty7>label{
+    font-weight: 800;
+ }
  .requiredField{
     font-weight: 800;
  }
