--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -109,14 +109,15 @@
 </div>
 
 {% endblock %} {% block content %}
-<br><br><br><br>
+<br>
 <div class="container" style="align-items: center;">
     {% for i in talk_list %}
 
         <div class="card mb-5 h-8" style="min-height: 100%;">
 
             <div class="embed-responsive embed-responsive-16by9 video">
-                <iframe width="100%" height="100%" class="embed-responsive-item" src="{{i.pic}}" allowfullscreen></iframe>
+                <!-- <iframe width="100%" height="100%" class="embed-responsive-item" src="{{i.pic}}" allowfullscreen></iframe> -->
+                <div>{{i.name}}</div>
             </div>
         </div>
     {% endfor %}
