--- a/inphase/templates/inphase/inphase_list.html
+++ b/inphase/templates/inphase/inphase_list.html
@@ -55,6 +55,10 @@
          background-repeat: no-repeat; 
         
     }
+
+    body{
+        overflow-x: hidden;
+    }
     @media screen and (max-width:500px) {
         .background{
         background-position-x: -20vw; 
