--- a/inplex/templates/inplex/home.html
+++ b/inplex/templates/inplex/home.html
@@ -119,10 +119,10 @@
                      {% endif %}
     
                 </div>
-                <!-- <div>
+                <div>
                     <a class='btn btn-primary experience_btn1 ml-4  ' href="{% url 'inplex:experience' %}">Show
                         experience</a>
-                </div> -->
+                </div>
             </div>
         </div>
        
