--- a/inplex/templates/inplex/student_experienceprofile.html
+++ b/inplex/templates/inplex/student_experienceprofile.html
@@ -52,7 +52,7 @@
                         <span class="text-white text-2xl font-bold uppercase">PP</span>
                     </div>
                     <div class="block pl-2 font-semibold text-xl self-start text-gray-700">
-                        <h2 class="leading-relaxed">Paramveer Prakash</h2>
+                        <h2 class="leading-relaxed">{{owner}}</h2>
                         <p class="text-sm text-gray-500 font-normal leading-relaxed">Electronics and Communication Engineering</p>
                     </div>
                 </div>
